--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+
+@import url("https://fonts.googleapis.com/css?family=Comfortaa|Patua+One");
+@import "~@fortawesome/fontawesome-free/css/all.min.css";
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
