--- a/src/index.css
+++ b/src/index.css
@@ -272,3 +272,12 @@ a {
   text-decoration: none;
   background-color: transparent;
 }
+
+.btn-primary:not(:disabled):not(.disabled):active:focus, .btn-primary:not(:disabled):not(.disabled).active:focus, .show > .btn-primary.dropdown-toggle:focus {
+  box-shadow: 0 0 0 0.2rem rgb(77 77 77 / 50%);
+}
+.btn-primary:not(:disabled):not(.disabled):active, .btn-primary:not(:disabled):not(.disabled).active, .show > .btn-primary.dropdown-toggle {
+  color: #fff;
+  background-color: #37383a;
+  border-color: #5e5f5f;
+}
