--- a/src/components/tags/tag.css
+++ b/src/components/tags/tag.css
@@ -22,7 +22,7 @@
   }
   
   .tagname {
-    background-color: #0c8826;
+    background-color: rgb(77, 77, 77);
     color: white;
     margin: 1rem;
     border-radius: 5px;
